--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Delius&family=Tangerine:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: cornsilk;
+}
+
+h1 {
+  @apply text-3xl;
+}
